Update to latest DPF, adjust to it; add CI source target
Signed-off-by: falkTX <falktx@falktx.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,3 +52,13 @@ jobs:
       - uses: distrho/dpf-cmake-action@v1
         with:
           target: pluginval
+
+  source:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          submodules: recursive
+      - uses: distrho/dpf-cmake-action@v1
+        with:
+          target: source
