--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # DISTRHO Plugin Framework (DPF)
 # Copyright (C) 2021 Jean Pierre Cimalando <jp-dev@inbox.ru>
-# Copyright (C) 2021-2025 Filipe Coelho <falktx@falktx.com>
+# Copyright (C) 2021-2026 Filipe Coelho <falktx@falktx.com>
 # SPDX-License-Identifier: ISC
 
 cmake_minimum_required(VERSION 3.7...3.31)
@@ -16,6 +16,7 @@ dpf_add_plugin(${NAME}
   TARGETS clap lv2 vst2 vst3 jack
   FILES_DSP
       src/PluginDSP.cpp
+      src/Biquad.cpp
   FILES_UI
       src/PluginUI.cpp
       dpf-widgets/opengl/DearImGui.cpp)
